--- a/package.json
+++ b/package.json
@@ -218,6 +218,7 @@
 		"webfinger.js": "2.6.6",
 		"webpack": "4.6.0",
 		"webpack-cli": "2.0.15",
+		"webpack-multilang-i18n-plugin": "1.1.8",
 		"webpack-replace-loader": "1.3.0",
 		"websocket": "1.0.26",
 		"ws": "5.1.1",
