--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "allowJs": true,
     "noEmitOnError": false,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "noImplicitReturns": true,
     "noUnusedParameters": false,
     "noUnusedLocals": true,
@@ -14,7 +14,7 @@
     "removeComments": false,
     "noLib": false,
     "strict": true,
-    "strictNullChecks": false
+		"strictNullChecks": false
   },
   "compileOnSave": false,
   "include": [
