--- a/src/client/assets/manifest.json
+++ b/src/client/assets/manifest.json
@@ -6,32 +6,32 @@
 	"background_color": "#313a42",
 	"icons": [
 		{
-			"src": "/assets/favicon/16.png",
+			"src": "/assets/icon/16.png",
 			"size": "16x16",
 			"type": "image/png"
 		},
 		{
-			"src": "/assets/favicon/32.png",
+			"src": "/assets/icon/32.png",
 			"size": "32x32",
 			"type": "image/png"
 		},
 		{
-			"src": "/assets/favicon/64.png",
+			"src": "/assets/icon/64.png",
 			"size": "64x64",
 			"type": "image/png"
 		},
 		{
-			"src": "/assets/favicon/128.png",
+			"src": "/assets/icon/128.png",
 			"size": "128x128",
 			"type": "image/png"
 		},
 		{
-			"src": "/assets/favicon/192.png",
+			"src": "/assets/icon/192.png",
 			"size": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "/assets/favicon/256.png",
+			"src": "/assets/icon/256.png",
 			"size": "256x256",
 			"type": "image/png"
 		}
