--- a/src/client/assets/manifest.json
+++ b/src/client/assets/manifest.json
@@ -7,32 +7,32 @@
 	"icons": [
 		{
 			"src": "/assets/icons/16.png",
-			"size": "16x16",
+			"sizes": "16x16",
 			"type": "image/png"
 		},
 		{
 			"src": "/assets/icons/32.png",
-			"size": "32x32",
+			"sizes": "32x32",
 			"type": "image/png"
 		},
 		{
 			"src": "/assets/icons/64.png",
-			"size": "64x64",
+			"sizes": "64x64",
 			"type": "image/png"
 		},
 		{
 			"src": "/assets/icons/128.png",
-			"size": "128x128",
+			"sizes": "128x128",
 			"type": "image/png"
 		},
 		{
 			"src": "/assets/icons/192.png",
-			"size": "192x192",
+			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
 			"src": "/assets/icons/256.png",
-			"size": "256x256",
+			"sizes": "256x256",
 			"type": "image/png"
 		}
 	],
