--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
 		"@types/debug": "0.0.30",
 		"@types/deep-equal": "1.0.1",
 		"@types/elasticsearch": "5.0.24",
+		"@types/file-type": "5.2.1",
 		"@types/gm": "1.18.0",
-		"@types/gulp": "4.0.5",
+		"@types/gulp": "3.8.36",
 		"@types/gulp-htmlmin": "1.3.32",
 		"@types/gulp-mocha": "0.0.32",
 		"@types/gulp-rename": "0.0.33",
@@ -46,6 +47,7 @@
 		"@types/is-root": "1.0.0",
 		"@types/is-url": "1.2.28",
 		"@types/js-yaml": "3.11.1",
+		"@types/jsdom": "11.0.6",
 		"@types/koa": "2.0.46",
 		"@types/koa-bodyparser": "4.2.0",
 		"@types/koa-compress": "2.0.8",
@@ -215,14 +217,13 @@
 		"webpack-cli": "3.0.8",
 		"websocket": "1.0.26",
 		"ws": "5.2.0",
-		"xev": "2.0.1",
-		"@types/file-type": "5.2.1",
-		"@types/jsdom": "11.0.6"
+		"xev": "2.0.1"
 	},
 	"greenkeeper": {
 		"ignore": [
 			"deepcopy",
-			"cafy"
+			"cafy",
+			"@types/gulp"
 		]
 	}
 }
