--- a/elasticsearch/mappings.json
+++ b/elasticsearch/mappings.json
@@ -35,29 +35,16 @@
 				"bio": {
 					"type": "string",
 					"index": "analyzed",
-					"analyzer": "kuromoji"
+					"analyzer": "bigram"
 				}
 			}
 		},
-		"post": {
+		"note": {
 			"properties": {
 				"text": {
 					"type": "string",
 					"index": "analyzed",
-					"analyzer": "kuromoji"
-				}
-			}
-		},
-		"drive_file": {
-			"properties": {
-				"name": {
-					"type": "string",
-					"index": "analyzed",
-					"analyzer": "kuromoji"
-				},
-				"user": {
-					"type": "string",
-					"index": "not_analyzed"
+					"analyzer": "bigram"
 				}
 			}
 		}
