--- a/src/client/docs/api/entities/note.yaml
+++ b/src/client/docs/api/entities/note.yaml
@@ -27,8 +27,8 @@ props:
     type: "string"
     optional: true
     desc:
-      ja: "投稿の本文 (ローカルの場合Markdown風のフォーマット)"
-      en: "The text of this note (in Markdown like format if local)"
+      ja: "投稿の本文"
+      en: "The text of this note"
   - name: "mediaIds"
     type: "id(DriveFile)[]"
     optional: true
