Fix port cehcking

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"@types/ms": "0.7.30",
 		"@types/node": "10.5.2",
 		"@types/parse5": "5.0.0",
+		"@types/portscanner": "2.1.0",
 		"@types/pug": "2.0.4",
 		"@types/qrcode": "1.2.0",
 		"@types/ratelimiter": "2.1.28",
@@ -160,6 +161,7 @@
 		"on-build-webpack": "0.1.0",
 		"os-utils": "0.0.14",
 		"parse5": "5.0.0",
+		"portscanner": "2.2.0",
 		"progress-bar-webpack-plugin": "1.11.0",
 		"prominence": "0.2.0",
 		"promise-sequential": "1.1.1",
@@ -185,7 +187,6 @@
 		"summaly": "2.0.6",
 		"swagger-jsdoc": "1.9.7",
 		"syuilo-password-strength": "0.0.1",
-		"tcp-port-used": "0.1.2",
 		"textarea-caret": "3.1.0",
 		"tmp": "0.0.33",
 		"ts-loader": "4.4.1",
