--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@prezzemolo/rap": "0.1.2",
 		"@prezzemolo/zip": "0.0.3",
 		"@types/bcryptjs": "2.4.1",
+		"@types/dateformat": "1.0.1",
 		"@types/debug": "0.0.30",
 		"@types/deep-equal": "1.0.1",
 		"@types/elasticsearch": "5.0.25",
@@ -92,6 +93,7 @@
 		"chalk": "2.4.1",
 		"crc-32": "1.2.0",
 		"css-loader": "1.0.0",
+		"dateformat": "3.0.3",
 		"debug": "3.1.0",
 		"deep-equal": "1.0.1",
 		"deepcopy": "0.6.3",
