--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
 		"http-signature": "1.2.0",
 		"is-root": "2.0.0",
 		"is-url": "1.2.4",
+		"jquery": "3.3.1",
 		"js-yaml": "3.12.0",
 		"jsdom": "11.11.0",
 		"koa": "2.5.1",
