--- a/.config/example.yml
+++ b/.config/example.yml
@@ -20,7 +20,8 @@ maintainer:
 # You need to set 456 to 'port' prop.
 #
 # In other words, the 'url' prop should be the final accessible URL seen by a user.
-# 'port' prop is a port that the Misskey server should actually listen on and it is not necessarily the port that a user accesses.
+# 'port' prop is a port that the Misskey server should actually listen
+# on and it is not necessarily the port that a user accesses.
 
 url: http://localhost/
 
