--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
 		"@types/request-promise-native": "1.0.15",
 		"@types/rimraf": "2.0.2",
 		"@types/seedrandom": "2.4.27",
+		"@types/showdown": "1.7.5",
 		"@types/single-line-log": "1.1.0",
 		"@types/speakeasy": "2.0.2",
 		"@types/tmp": "0.0.33",
@@ -179,6 +180,7 @@
 		"s-age": "1.1.2",
 		"sass-loader": "7.0.3",
 		"seedrandom": "2.4.3",
+		"showdown": "1.8.6",
 		"single-line-log": "1.1.2",
 		"speakeasy": "2.0.0",
 		"style-loader": "0.21.0",
