--- a/package.json
+++ b/package.json
@@ -181,6 +181,7 @@
 		"sass-loader": "7.0.3",
 		"seedrandom": "2.4.3",
 		"showdown": "1.8.6",
+		"showdown-highlightjs-extension": "0.1.2",
 		"single-line-log": "1.1.2",
 		"speakeasy": "2.0.0",
 		"style-loader": "0.21.0",
