--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
 		"highlight.js": "9.12.0",
 		"html-minifier": "3.5.19",
 		"http-signature": "1.2.0",
+		"insert-text-at-cursor": "0.1.1",
 		"is-root": "2.0.0",
 		"is-url": "1.2.4",
 		"jquery": "3.3.1",
@@ -205,6 +206,7 @@
 		"vue-json-tree-view": "2.1.4",
 		"vue-loader": "15.2.6",
 		"vue-router": "3.0.1",
+		"vue-style-loader": "4.1.1",
 		"vue-template-compiler": "2.5.16",
 		"vuedraggable": "2.16.0",
 		"vuex": "3.0.1",
