--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"@types/koa-views": "2.0.3",
 		"@types/koa__cors": "2.2.2",
 		"@types/kue": "0.11.9",
+		"@types/minio": "6.0.2",
 		"@types/mkdirp": "0.5.2",
 		"@types/mocha": "5.2.3",
 		"@types/mongodb": "3.1.2",
@@ -147,6 +148,7 @@
 		"kue": "0.11.6",
 		"loader-utils": "1.1.0",
 		"mecab-async": "0.1.2",
+		"minio": "6.0.0",
 		"mkdirp": "0.5.1",
 		"mocha": "5.2.0",
 		"moji": "0.5.1",
