--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
 		"@types/deep-equal": "1.0.1",
 		"@types/elasticsearch": "5.0.25",
 		"@types/file-type": "5.2.1",
-		"@types/gm": "1.18.0",
 		"@types/gulp": "3.8.36",
 		"@types/gulp-htmlmin": "1.3.32",
 		"@types/gulp-mocha": "0.0.32",
@@ -73,6 +72,7 @@
 		"@types/request-promise-native": "1.0.15",
 		"@types/rimraf": "2.0.2",
 		"@types/seedrandom": "2.4.27",
+		"@types/sharp": "0.17.9",
 		"@types/showdown": "1.7.5",
 		"@types/single-line-log": "1.1.0",
 		"@types/speakeasy": "2.0.2",
@@ -108,7 +108,6 @@
 		"file-loader": "1.1.11",
 		"file-type": "8.1.0",
 		"fuckadblock": "3.2.1",
-		"gm": "1.23.1",
 		"gulp": "3.9.1",
 		"gulp-cssnano": "2.1.3",
 		"gulp-htmlmin": "4.0.0",
@@ -165,7 +164,6 @@
 		"parse5": "5.0.0",
 		"portscanner": "2.2.0",
 		"progress-bar-webpack-plugin": "1.11.0",
-		"prominence": "0.2.0",
 		"promise-sequential": "1.1.1",
 		"pug": "2.0.3",
 		"punycode": "2.1.1",
@@ -181,6 +179,7 @@
 		"s-age": "1.1.2",
 		"sass-loader": "7.0.3",
 		"seedrandom": "2.4.3",
+		"sharp": "0.20.5",
 		"showdown": "1.8.6",
 		"showdown-highlightjs-extension": "0.1.2",
 		"single-line-log": "1.1.2",
