Use bee-queue instead of Kue

--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
 		"@types/koa-send": "4.1.1",
 		"@types/koa-views": "2.0.3",
 		"@types/koa__cors": "2.2.2",
-		"@types/kue": "0.11.9",
 		"@types/minio": "6.0.2",
 		"@types/mkdirp": "0.5.2",
 		"@types/mocha": "5.2.3",
@@ -86,6 +85,7 @@
 		"autosize": "4.0.2",
 		"autwh": "0.1.0",
 		"bcryptjs": "2.4.3",
+		"bee-queue": "1.2.2",
 		"bootstrap-vue": "2.0.0-rc.11",
 		"cafy": "11.3.0",
 		"chalk": "2.4.1",
@@ -144,7 +144,6 @@
 		"koa-send": "5.0.0",
 		"koa-slow": "2.1.0",
 		"koa-views": "6.1.4",
-		"kue": "0.11.6",
 		"loader-utils": "1.1.0",
 		"mecab-async": "0.1.2",
 		"minio": "6.0.0",
