--- a/package.json
+++ b/package.json
@@ -159,7 +159,6 @@
 		"nprogress": "0.2.0",
 		"object-assign-deep": "0.4.0",
 		"on-build-webpack": "0.1.0",
-		"os-utils": "0.0.14",
 		"parse5": "5.0.0",
 		"portscanner": "2.2.0",
 		"progress-bar-webpack-plugin": "1.11.0",
@@ -187,6 +186,7 @@
 		"stylus": "0.54.5",
 		"stylus-loader": "3.0.2",
 		"summaly": "2.0.6",
+		"systeminformation": "3.42.4",
 		"syuilo-password-strength": "0.0.1",
 		"textarea-caret": "3.1.0",
 		"tmp": "0.0.33",
