--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
 		"nprogress": "0.2.0",
 		"object-assign-deep": "0.4.0",
 		"on-build-webpack": "0.1.0",
+		"os-utils": "0.0.14",
 		"parse5": "5.0.0",
 		"portscanner": "2.2.0",
 		"progress-bar-webpack-plugin": "1.11.0",
