--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
 		"koa-slow": "2.1.0",
 		"koa-views": "6.1.4",
 		"loader-utils": "1.1.0",
+		"lodash.assign": "4.2.0",
 		"mecab-async": "0.1.2",
 		"minio": "6.0.0",
 		"mkdirp": "0.5.1",
