--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@types/dateformat": "1.0.1",
 		"@types/debug": "0.0.30",
 		"@types/deep-equal": "1.0.1",
+		"@types/double-ended-queue": "2.1.0",
 		"@types/elasticsearch": "5.0.25",
 		"@types/file-type": "5.2.1",
 		"@types/gulp": "3.8.36",
@@ -97,6 +98,7 @@
 		"deepcopy": "0.6.3",
 		"diskusage": "0.2.4",
 		"dompurify": "1.0.5",
+		"double-ended-queue": "2.1.0-0",
 		"elasticsearch": "15.1.1",
 		"element-ui": "2.4.6",
 		"emojilib": "2.3.0",
