--- a/.config/example.yml
+++ b/.config/example.yml
@@ -51,7 +51,7 @@ remoteDriveCapacityMb: 8
 #  Server will not cache remote files (Using direct link instead).
 #  You can save your storage.
 #  Users cannot see remote images when they turn off "Show media from a remote server" setting.
-preventCache: false
+preventCacheRemoteFiles: false
 
 drive:
   storage: 'db'
