--- a/.config/example.yml
+++ b/.config/example.yml
@@ -50,7 +50,10 @@ remoteDriveCapacityMb: 8
 # If enabled:
 #  Server will not cache remote files (Using direct link instead).
 #  You can save your storage.
-#  Users cannot see remote images when they turn off "Show media from a remote server" setting.
+#
+#  NOTE:
+#  * Users cannot see remote images when they turn off "Show media from a remote server" setting.
+#  * Since thumbnails are not provided, traffic increases.
 preventCacheRemoteFiles: false
 
 drive:
