--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
 		"monk": "6.0.6",
 		"ms": "2.1.1",
 		"nan": "2.10.0",
+		"nested-property": "0.0.7",
 		"node-sass": "4.9.3",
 		"node-sass-json-importer": "3.3.1",
 		"nprogress": "0.2.0",
