--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /locales/ja.yml
-    translation: /locales/%two_letters_code%.yml
+  - source: /locales/ja-JP.yml
+    translation: /locales/%locale%.yml
