install lib dependency

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"main": "./index.js",
 	"private": true,
 	"scripts": {
+		"postinstall": "cd lib/CubismWebFramework && npm install",
 		"start": "node --experimental-json-modules ./index.js",
 		"start:test": "cross-env NODE_ENV=test node --experimental-json-modules ./index.js",
 		"init": "npm run migrate",
