--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -29,12 +29,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Init submodules
-      run: git submodule update --init
     - name: Install dependencies
       run: yarn install
     - name: Check yarn.lock
@@ -50,9 +50,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: true
     - uses: actions/setup-node@v1
       with:
         node-version: 12.x
-    - run: git submodule update --init
     - run: yarn install
     - run: yarn lint
