--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 		"watch-gulp": "gulp watch",
 		"clean": "gulp clean",
 		"cleanall": "gulp cleanall",
-		"lint": "tslint 'src/**/*.ts'",
+		"lint": "eslint src/**/*.ts",
 		"cy:open": "cypress open",
 		"cy:run": "cypress run",
 		"e2e": "start-server-and-test start:test http://localhost cy:run",
@@ -103,7 +103,8 @@
 		"@types/webpack-stream": "3.2.12",
 		"@types/websocket": "1.0.4",
 		"@types/ws": "7.4.7",
-		"@typescript-eslint/parser": "4.29.2",
+		"@typescript-eslint/eslint-plugin": "4.29.3",
+		"@typescript-eslint/parser": "4.29.3",
 		"@vue/compiler-sfc": "3.2.4",
 		"abort-controller": "3.0.0",
 		"apexcharts": "3.27.3",
@@ -131,6 +132,7 @@
 		"dateformat": "4.5.1",
 		"escape-regexp": "0.0.1",
 		"eslint": "7.32.0",
+		"eslint-plugin-import": "2.24.2",
 		"eslint-plugin-vue": "7.16.0",
 		"eventemitter3": "4.0.7",
 		"feed": "4.2.2",
@@ -143,7 +145,6 @@
 		"gulp-rename": "2.0.0",
 		"gulp-replace": "1.1.3",
 		"gulp-terser": "2.0.1",
-		"gulp-tslint": "8.1.4",
 		"hpagent": "0.1.2",
 		"http-signature": "1.3.5",
 		"idb-keyval": "5.1.3",
@@ -222,8 +223,6 @@
 		"ts-node": "10.2.1",
 		"tsc-alias": "1.3.9",
 		"tsconfig-paths": "3.10.1",
-		"tslint": "6.1.3",
-		"tslint-sonarts": "1.9.0",
 		"twemoji-parser": "13.1.0",
 		"typeorm": "0.2.37",
 		"typescript": "4.3.5",
