--- a/package.json
+++ b/package.json
@@ -119,7 +119,8 @@
 		"cafy": "15.2.1",
 		"cbor": "8.0.2",
 		"chalk": "4.1.2",
-		"chart.js": "2.9.4",
+		"chart.js": "3.5.1",
+		"chartjs-adapter-date-fns": "2.0.0",
 		"cli-highlight": "2.1.11",
 		"compare-versions": "3.6.0",
 		"concurrently": "6.3.0",
@@ -127,6 +128,7 @@
 		"crc-32": "1.2.0",
 		"css-loader": "6.3.0",
 		"cssnano": "5.0.8",
+		"date-fns": "2.25.0",
 		"dateformat": "4.5.1",
 		"escape-regexp": "0.0.1",
 		"eslint": "7.32.0",
