--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
 		"@types/jsonld": "1.5.6",
 		"@types/katex": "0.11.1",
 		"@types/koa": "2.13.4",
+		"@types/koa__cors": "3.0.3",
+		"@types/koa__multer": "2.0.3",
+		"@types/koa__router": "8.0.8",
 		"@types/koa-bodyparser": "4.3.3",
 		"@types/koa-cors": "0.0.2",
 		"@types/koa-favicon": "2.0.21",
@@ -67,9 +70,6 @@
 		"@types/koa-mount": "4.0.1",
 		"@types/koa-send": "4.1.3",
 		"@types/koa-views": "7.0.0",
-		"@types/koa__cors": "3.0.3",
-		"@types/koa__multer": "2.0.3",
-		"@types/koa__router": "8.0.8",
 		"@types/markdown-it": "12.2.3",
 		"@types/matter-js": "0.17.5",
 		"@types/mocha": "8.2.3",
@@ -121,6 +121,7 @@
 		"chalk": "4.1.2",
 		"chart.js": "3.5.1",
 		"chartjs-adapter-date-fns": "2.0.0",
+		"chartjs-plugin-zoom": "1.1.1",
 		"cli-highlight": "2.1.11",
 		"compare-versions": "3.6.0",
 		"concurrently": "6.3.0",
