--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"codename": "indigo",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/misskey-dev/misskey.git"
+		"url": "https://github.com/nyaone/misskey.git"
 	},
 	"main": "./index.js",
 	"private": true,
