--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "misskey-assets"]
 	path = misskey-assets
 	url = https://github.com/misskey-dev/assets.git
+	shallow = true
 [submodule "twemoji"]
 	path = twemoji
 	url = https://github.com/twitter/twemoji.git
+	shallow = true
