--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,9 @@
 	path = misskey-assets
 	url = https://github.com/misskey-dev/assets.git
 	shallow = true
+	branch = main
 [submodule "twemoji"]
 	path = twemoji
 	url = https://github.com/twitter/twemoji.git
 	shallow = true
+	branch = master
