--- a/package.json
+++ b/package.json
@@ -8,22 +8,19 @@
 	},
 	"private": true,
 	"scripts": {
+		"postinstall": "node ./scripts/install-packages.js",
+		"build": "node ./scripts/build.js",
 		"start": "cd packages/backend && node --experimental-json-modules ./built/index.js",
 		"start:test": "cd packages/backend && cross-env NODE_ENV=test node --experimental-json-modules ./index.js",
 		"init": "npm run migrate",
 		"ormconfig": "node ./packages/backend/ormconfig.js",
 		"migrate": "cd packages/backend && npx typeorm migration:run",
 		"migrateandstart": "npm run migrate && npm run start",
-		"build": "npm run build-client && npm run build-backend && npm run build-gulp",
-		"build-client": "cd packages/client && npm run build",
-		"build-backend": "cd packages/backend && npm run build",
-		"build-gulp": "gulp build",
+		"gulp": "gulp build",
 		"watch": "concurrently \"npm:watch-*\"",
 		"watch-webpack": "webpack --watch",
 		"watch-ts": "tsc -w -p packages/tsconfig.json && tsc-alias -w -p packages/tsconfig.json",
 		"watch-gulp": "gulp watch",
-		"clean": "gulp clean",
-		"cleanall": "gulp cleanall",
 		"lint": "tslint 'packages/**/*.ts'",
 		"cy:open": "cypress open",
 		"cy:run": "cypress run",
@@ -35,6 +32,7 @@
 	"dependencies": {
 		"@types/gulp": "4.0.9",
 		"@types/gulp-rename": "2.0.1",
+		"execa": "5.1.1",
 		"gulp": "4.0.2",
 		"gulp-cssnano": "2.1.3",
 		"gulp-rename": "2.0.0",
