--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,7 +5,7 @@
 		"init": "npm run migrate",
 		"build": "tsc -p tsconfig.json || echo done. && tsc-alias -p tsconfig.json",
 		"watch": "tsc -w -p tsconfig.json && tsc-alias -w -p tsconfig.json",
-		"lint": "tslint '**/*.ts'",
+		"lint": "eslint --quiet src/**/*.ts",
 		"mocha": "cross-env TS_NODE_FILES=true TS_NODE_TRANSPILE_ONLY=true TS_NODE_PROJECT=\"./test/tsconfig.json\" mocha",
 		"test": "npm run mocha"
 	},
@@ -73,6 +73,7 @@
 		"@types/webpack-stream": "3.2.12",
 		"@types/websocket": "1.0.4",
 		"@types/ws": "8.2.0",
+		"@typescript-eslint/eslint-plugin": "5.3.1",
 		"@typescript-eslint/parser": "5.1.0",
 		"abort-controller": "3.0.0",
 		"autobind-decorator": "2.4.0",
@@ -102,6 +103,7 @@
 		"deep-email-validator": "0.1.18",
 		"escape-regexp": "0.0.1",
 		"eslint": "8.2.0",
+		"eslint-plugin-import": "2.25.3",
 		"eslint-plugin-vue": "8.0.3",
 		"eventemitter3": "4.0.7",
 		"feed": "4.2.2",
@@ -179,8 +181,6 @@
 		"ts-node": "10.4.0",
 		"tsc-alias": "1.3.10",
 		"tsconfig-paths": "3.11.0",
-		"tslint": "6.1.3",
-		"tslint-sonarts": "1.9.0",
 		"twemoji-parser": "13.1.0",
 		"typeorm": "0.2.39",
 		"typescript": "4.4.4",
