--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"e2e": "start-server-and-test start:test http://localhost:61812 cy:run",
 		"mocha": "cd packages/backend && cross-env TS_NODE_FILES=true TS_NODE_TRANSPILE_ONLY=true TS_NODE_PROJECT=\"./test/tsconfig.json\" mocha",
 		"test": "npm run mocha",
-		"format": "gulp format"
+		"format": "gulp format",
+		"clean": "node ./scripts/clean.js"
 	},
 	"dependencies": {
 		"@types/gulp": "4.0.9",
