--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"postinstall": "node ./scripts/install-packages.js",
 		"build": "node ./scripts/build.js",
 		"start": "cd packages/backend && node --experimental-json-modules ./built/index.js",
-		"start:test": "cd packages/backend && cross-env NODE_ENV=test node --experimental-json-modules ./index.js",
+		"start:test": "cd packages/backend && cross-env NODE_ENV=test node --experimental-json-modules ./built/index.js",
 		"init": "npm run migrate",
 		"ormconfig": "node ./packages/backend/ormconfig.js",
 		"migrate": "cd packages/backend && npx typeorm migration:run",
