--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
 		"gulp-cssnano": "2.1.3",
 		"gulp-rename": "2.0.0",
 		"gulp-replace": "1.1.3",
-		"gulp-terser": "2.1.0",
-		"gulp-tslint": "8.1.4"
+		"gulp-terser": "2.1.0"
 	},
 	"devDependencies": {
 		"@redocly/openapi-core": "1.0.0-beta.54",
