--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -135,7 +135,7 @@
 		"mfm-js": "0.20.0",
 		"misskey-js": "0.0.8",
 		"mocha": "8.4.0",
-		"ms": "2.1.3",
+		"ms": "3.0.0-canary.1",
 		"multer": "1.4.3",
 		"nested-property": "4.0.0",
 		"node-fetch": "2.6.1",
