feat: 通報があったときに管理者へEメールで通知されるように
Resolve #7025

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -59,6 +59,7 @@
 		"@types/redis": "2.8.32",
 		"@types/rename": "1.0.4",
 		"@types/request-stats": "3.0.0",
+		"@types/sanitize-html": "2.5.0",
 		"@types/seedrandom": "2.4.28",
 		"@types/sharp": "0.29.3",
 		"@types/sinonjs__fake-timers": "6.0.4",
@@ -163,6 +164,7 @@
 		"require-all": "3.0.0",
 		"rndstr": "1.0.0",
 		"s-age": "1.1.2",
+		"sanitize-html": "2.5.3",
 		"seedrandom": "3.0.5",
 		"sharp": "0.29.2",
 		"speakeasy": "2.0.0",
