--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 		"mocha": "cd packages/backend && cross-env TS_NODE_FILES=true TS_NODE_TRANSPILE_ONLY=true TS_NODE_PROJECT=\"./test/tsconfig.json\" npx mocha",
 		"test": "npm run mocha",
 		"format": "gulp format",
-		"clean": "node ./scripts/clean.js"
+		"clean": "node ./scripts/clean.js",
+		"clean-all": "node ./scripts/clean-all.js"
 	},
 	"dependencies": {
 		"@types/gulp": "4.0.9",
