--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
 	"devDependencies": {
 		"@redocly/openapi-core": "1.0.0-beta.54",
 		"@types/fluent-ffmpeg": "2.1.17",
+		"@typescript-eslint/parser": "5.4.0",
 		"cross-env": "7.0.3",
 		"cypress": "9.0.0",
-		"start-server-and-test": "1.14.0"
+		"start-server-and-test": "1.14.0",
+		"typescript": "4.5.2"
 	}
 }
