implement dev command

--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
 		"migrate": "cd packages/backend && npx typeorm migration:run",
 		"migrateandstart": "npm run migrate && npm run start",
 		"gulp": "gulp build",
-		"watch": "concurrently \"npm:watch-*\"",
-		"watch-webpack": "webpack --watch",
-		"watch-ts": "tsc -w -p packages/tsconfig.json && tsc-alias -w -p packages/tsconfig.json",
-		"watch-gulp": "gulp watch",
+		"watch": "npm run dev",
+		"dev": "node ./scripts/dev.js",
 		"lint": "node ./scripts/lint.js",
 		"cy:open": "cypress open",
 		"cy:run": "cypress run",
