--- a/packages/sw/package.json
+++ b/packages/sw/package.json
@@ -9,7 +9,8 @@
 	"dependencies": {
 		"idb-keyval": "6.0.3",
 		"misskey-js": "0.0.10",
-		"webpack": "5.64.1"
+		"webpack": "5.64.1",
+		"webpack-cli": "4.9.1"
 	},
 	"devDependencies": {
 		"eslint": "8.2.0"
