--- a/packages/sw/package.json
+++ b/packages/sw/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"idb-keyval": "6.0.3",
 		"misskey-js": "0.0.10",
+		"ts-loader": "9.2.6",
 		"webpack": "5.64.1",
 		"webpack-cli": "4.9.1"
 	},
