--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -74,6 +74,7 @@
 		"@typescript-eslint/eslint-plugin": "5.3.1",
 		"@typescript-eslint/parser": "5.1.0",
 		"abort-controller": "3.0.0",
+		"archiver": "5.3.0",
 		"autobind-decorator": "2.4.0",
 		"autosize": "4.0.4",
 		"autwh": "0.1.0",
@@ -131,6 +132,7 @@
 		"koa-views": "7.0.2",
 		"langmap": "0.0.16",
 		"mfm-js": "0.20.0",
+		"mime-types": "2.1.34",
 		"misskey-js": "0.0.8",
 		"mocha": "8.4.0",
 		"ms": "3.0.0-canary.1",
