--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -20,7 +20,7 @@
 		"@koa/multer": "3.0.0",
 		"@koa/router": "9.0.1",
 		"@sinonjs/fake-timers": "7.1.2",
-		"@syuilo/aiscript": "0.11.1",
+		"@syuilo/aiscript": "file:../../local/aiscript",
 		"@types/bcryptjs": "2.4.2",
 		"@types/bull": "3.15.5",
 		"@types/cbor": "6.0.0",
