--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,7 +15,7 @@
 		"@sentry/browser": "5.29.2",
 		"@sentry/tracing": "5.29.2",
 		"@sinonjs/fake-timers": "7.1.2",
-		"@syuilo/aiscript": "0.11.1",
+		"@syuilo/aiscript": "file:../../local/aiscript",
 		"@types/dateformat": "3.0.1",
 		"@types/escape-regexp": "0.0.0",
 		"@types/glob": "7.2.0",
