--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -55,6 +55,7 @@
 		"css-loader": "6.5.1",
 		"cssnano": "5.0.14",
 		"date-fns": "2.28.0",
+		"deepcopy": "2.1.0",
 		"escape-regexp": "0.0.1",
 		"eslint": "8.6.0",
 		"eslint-plugin-vue": "8.2.0",
