--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -12,6 +12,7 @@
 		"target": "es2017",
 		"module": "esnext",
 		"moduleResolution": "node",
+		"allowSyntheticDefaultImports": true,
 		"removeComments": false,
 		"noLib": false,
 		"strict": true,
